[package]
name = "coreml-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = { path = "../rust-block" }
foreign-types = "0.3"
cocoa-foundation = "0.1"

[dependencies.objc]
version = "0.2.4"
features = ["objc_exception"]